# split-building-limits-api

./: .envrc.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml  markdown.json  pyproject.toml  pytest.ini
.github/workflows/: code-quality.yaml
examples/: input_validation_error.json  plateaus_fully_covering.json  split_building_limits_examples.ipynb
src/: app.py  error_handlers.py  exceptions.py  handlers.py  helpers.py  models.py  persistence.py
tests/: conftest.py  test_integration.py  test_unit.py
tests/input_files/: building_limit_plateaus_coordinates_format_error.json  building_limit_plateaus_format_error.json  building_limit_with_holes_error.json  overlapping_building_limits_error.json  overlapping_height_plateaus_error.json  plateaus_covering_building_limit.json  plateaus_covering_building_limit_with_holes_error.json  plateaus_covering_multiple_building_limits.json  plateaus_covering_multiple_building_limits2.json  plateaus_covering_multiple_building_limits3.json  plateaus_without_height_data_error.json
tests/integration/: conftest.py  test_errors.py  test_persistence.py  test_success.py
tests/unit/: test_helpers.py  test_models.py
